@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model

class GreenSpacesManager{
}

class Manager {
}

class Employee {
}

class GreenSpace {
    name
    classification
    area
    location
    responsibleGSM
}

Manager "1..*" -- "1..*" Employee: is a >
Manager "1" -- "1..*" GreenSpacesManager: is a >
GreenSpace "1..*" -- "1" Manager: are managed by >


@enduml